# FrameSnap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: app.manifest
scripts/: build.ps1
src/: app.cpp  app.h  capture_engine.cpp  capture_engine.h  clipboard_publisher.cpp  clipboard_publisher.h  color_picker.cpp  color_picker.h  common.h  editor_window.cpp  editor_window.h  image_io.cpp  image_io.h  main.cpp  overlay_window.cpp  overlay_window.h  preview_window.cpp  preview_window.h  save_queue.cpp  save_queue.h  settings_store.cpp  settings_store.h  settings_window.cpp  settings_window.h  types.h  util.cpp  util.h
